# game-engine

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  README_research.md
.gitlab/merge_request_templates/: Default.md
doc/: tournament-instructions.md  tournament-rules.md  tournament-setup.md
launch/: README.md  fullList.csv  killGE.sh  launchConfigDefault.yaml  launchGE.sh  launchGE_debug.sh  leaderboard.csv  tournament.csv  tournament.sh
resources/maps/: circus_minimus.map  house_wall.map  temple_tournament.map  tournament.map  two_castles.map  uturn.map  walls_n_windows.map
run/: assetGames.yaml  config.rviz  params.yaml  params_lookahead.yaml  todd_params.yaml
src/: CMakeLists.txt
src/autonomy_protocol/: CMakeLists.txt  autonomy_protocol.h  autonomy_protocol_visualizer.cc  autonomy_protocol_visualizer.h  game_snapshot.h  presubmission_trajectory_vetter.h  student_game_engine_visualizer.h
src/autonomy_protocol/aerial_robotics/: CMakeLists.txt  example_autonomy_protocol.cc  example_autonomy_protocol.h  student_autonomy_protocol.cc  student_autonomy_protocol.h
src/environment/: map3d.cc  occupancy_grid2d.cc  occupancy_grid2d.h  occupancy_grid3d.cc  occupancy_grid3d.h
src/exe/: CMakeLists.txt  asset_games_protocol_main.cc  asset_games_protocol_simple_main.cc  blue_team_autonomy_protocol_main.cc  common_autonomy_protocol_main.cc  example_autonomy_protocol_main.cc  manual_control_protocol_main.cc  mediation_layer_main.cc  multi_quad_autonomy_protocol_main.cc  physics_simulator_main.cc  (+4 more)
test/: environment_tests.cc  graph_tests.cc
tmux/: stmux
(+66 files in other folders)
